# goldengate-server

./: Cargo.toml  compose.yaml
src/: args.rs  main.rs
src/api/: mod.rs
src/api/auth/: mod.rs  models.rs
src/api/private/: mod.rs  models.rs
src/api/public/: mod.rs  models.rs
